css/style.css
body {
    margin: 0;
    padding: 0;
}


/* TOP BAR */
#top-bar {
    background-color: #000;
    height: 25px;
    padding: 15px 0;
}

#top-bar #input-container {
    display: flex;
}

#top-bar input {
    padding: 5px 10px;
    border: 0;
    border-radius: 3px 0 0 3px;
}


#city-btn {
    background-color: orange;
    color: #FFF;
    border: 0;
    padding: 5px 10px;
    border-radius: 0 3px 3px 0;
}


/* CURRENT WEATHER STYLES */
#current-weather {
    color: #FFF;
    background-color: #1a1a1a;
    margin: 10px 0;
    padding: 10px 5px;
    opacity: 0.75;
    display: flex;
    height: 210px;
}

#current-weather-icon {
    text-align: center;
    flex: 1;
    display: flex;
    flex-direction: column;
}

#weather-info-container {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
}

#current-weather-info {
    display: flex;
}

#current-weather-icon i.owi {
    font-size: 8em;
}

#current-temp {
    font-size: 52px;
    flex: 1;
}

#high-low-temp {
    margin: auto 10px;
    display: flex;
    flex-direction: column;
}

#current-low-temp, #current-high-temp {
    font-size: 21px;
}

#city-info {
    display: flex;
    flex-direction: column;
}

#current-date {
    align-self: flex-end;
}

#current-day {
    font-size: 60px;
}

#current-weather-icon span {
    display: block;
    font-size: 21px;
}

/* FORECAST STYLES */

.three-hour-forecast .row {
    color: #FFF;
    background-color: #1a1a1a;
    margin: 10px 0;
    padding: 20px;
    opacity: 0.75;
}



/* BACKGROUND IMAGES */
.bg-image {
    height: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

#drizzle {
    background-image: url('../img/drizzle.jpg');
}

#clear {
    background-image: url('../img/clear-sky.jpg');
}

#clouds {
    background-image: url('../img/few-clouds.jpg');
}

#mist {
    background-image: url('../img/mist.jpg');
}

#rain {
    background-image: url('../img/shower-rain.jpg');
}

#snow {
    background-image: url('../img/snow.jpg');
}

#thunderstorm {
    background-image: url('../img/thunderstorm.jpg');
}


/*** FONT STYLES ***/
i.owi {
    color: #FFF;
}

p, span, a, li, div, i {
    font-family: 'Roboto', sans-serif;
    font-weight: 300;
}

.bold {
    font-family: 'Roboto Bold', sans-serif;
}

.black {
    font-family: 'Roboto Black', sans-serif;
}


/*** QUERIES ***/
/* Each media query mirrors the bootstrap breakpoints */

/* Smallest */
@media only screen and (max-width: 330px) {
    #current-temp {
        font-size: 48px !important;
    }
}


/* Extra Small */
@media only screen and (max-width: 575px) {

    #current-weather {
        flex-direction: column;
        height: 320px;
        justify-content: space-around;
    }

    #current-weather-icon {
        order: 1;
        flex: 0;
    }

    #weather-info-container {
        order: 2;
    }

    #city-info {
        order: 2;
    }

    #current-weather-info {
        order: 1;
    }

    #current-day {
        font-size: 30px;
    }

    #city-name, #current-date {
        font-size: 16px;
    }

    #current-temp {
        font-size: 64px;
    }

    .three-hour-forecast .row {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-around;
    }

    .forecast-main-temp {
        font-size: 30px;
    }

    .forecast-date {
        margin-bottom: 10px;
    }

    .forecast-description {
        display: flex;
        justify-content: center;
        align-items: center;
        margin-bottom: 10px;
        font-size: 24px;
    }

    .forecast-description i.owi {
        margin-right: 4px;
    }

    .temp-container {
        display: flex;
        justify-content: space-around;
    }

    .max-min-container {
        display: flex;
        flex-direction: column;
        margin-left: 10px;
    }

    .three-hour-forecast .forecast-info-container {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    #top-bar #input-container {
        justify-content: center;
    }

}

/* Small */
@media only screen and (min-width: 576px) {

    .forecast-main-temp {
        align-self: center;
    }

    .three-hour-forecast .row {
        display: flex;
    }
    
    .forecast-info-container {
        display: flex;
        flex-direction: column;
        flex: 2;
    }
    
    .forecast-date {
        margin-bottom: 10px;
        font-size: 18px;
    }
    
    .forecast-description {
        display: flex;
        font-size: 21px;
    }
    
    .forecast-description span {
        margin-left: 10px;
        align-self: center;
    }
    
    
    .forecast-description i.owi {
        font-size: 30px;
    }
    
    .temp-container {
        display: flex;
        flex-direction: row;
        font-size: 36px;
    }
    
    .max-min-container {
        display: flex;
        flex-direction: column;
        font-size: 21px;
        margin: auto 10px;
    }

    #top-bar #input-container {
        justify-content: center;
    }

}

/* Medium */
@media only screen and (min-width: 768px) {

    main {
        width: 700px;
        margin: 0 auto;
    }

    #top-bar #input-container {
        width: 700px;
        margin: 0 auto;
    }

    /* CURRENT WEATHER STYLES */
    #current-weather {
        display: flex;
    }

    #current-weather-icon {
        flex: 1;
    }

    #weather-info-container {
        flex: 1;
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    #current-weather-info {
        display: flex;
    }

    #current-temp {
        flex: 1;
    }

    #high-low-temp {
        display: flex;
        flex-direction: column;
    }

    #city-info {
        display: flex;
        flex-direction: column;
    }

    #current-date {
        align-self: flex-end;
    }


    /* FORECAST STYLES */
    .forecast-info-container {
        flex-direction: row;
        align-items: center;
    }

    .three-hour-forecast .row {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    .forecast-date {
        flex: 2;
    }

    .forecast-description {
        flex: 2; 
    }

    .forecast-main-temp {
        justify-content: flex-end;
        flex: 1;
        align-self: center;
    }

    .three-hour-forecast .temp-container {
        font-size: 21px;
    }

    .max-min-container {
        flex-direction: row;
    }

    .forecast-max-temp {
        justify-content: flex-end;
        margin-right: 5px;
    }

    .forecast-min-temp {
        justify-content: flex-end;
    }

    .three-hour-forecast i.owi {
        font-size: 36px;
        margin-right: 5px;
    }

    .forecast-date {
        font-size: 18px;
    }
    
    .forecast-description {
        font-size: 18px;
    }

    #top-bar #input-container {
        justify-content: flex-end;
    }
    
}

/* Large */
@media only screen and (min-width: 992px) {

}

/* Extra Large */
@media only screen and (min-width: 1200px) {

}

